--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       <ul id="goals"></ul>
     </div>
 
-    <script src="./index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
