Redux was implemented

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDos / Goals</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
   </head>
   <body>
     <div class="section">
@@ -25,6 +27,6 @@
       <ul id="goals"></ul>
     </div>
 
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./index-redux.js"></script>
   </body>
 </html>
